 * Searching in the dust: Fix a lot of broken/stupid smuggler behaviours
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Allow to leave a control unused
 + Reset zoom resets zoom to zoom level set in options
 + Add control to display mines time and health crate health (default: O)
 + Precise + Reset zoom resets zoom to 100% (instead of zoom in options)
 + Precise + zoom in/out changes zoom in smaller steps
 + Precise + volume up/down changes volume in smaller steps
 + New chat command: “/help room” (shows room chat commands within the game)

Graphics:
 + Show contour of flying saucer when in highly opaque water
 + Remove visual clutter in cut scenes
 + Add setting to set default/initial zoom
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns
 * Fix odd floating pixels when wielding and rotating cleaver

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Don't show hedgehog health if “invulnerable” game modifier is active
 + Display player name of own teams in online games
 * Black clan color can now be used without visual problems
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game